@startuml buscaminas

class Jugar
{
    + Jugar(int Tam, int minas, int celdas)
    + void ManejarEventos(RenderWindow &window, int Tam, int celdas)
    + void Ejecutar(int Tam, int minas, int celdas)
    - int ContarMinasCerca(int x, int y)
    - void ColocarBandera(int x, int y)
    - void RevelarCelda(int x, int y)

}
class CrearCampo
{
    + bool ganar
    + bool perder
    + int minast 
    + int puntaje
    + Font fuente
    + vector<vector<Celda>> tablero
    + bool ventana
    + CrearCampo(int Tam, int minas, int celdas)
    - void IncializarTablero(int Tam,int celdas)
    - void ColocarMinas
}
class SeleccinarDificultad
{
    + SeleccinarDificultad(int Tam, int minas, int celdas)
    + bool seleccion
}

class Celda
{
    + RenctangleShape rect
    + Texto texto
    + bool tieneMina
    + bool revelado
    + int minasCerca
}

Juego "1" *-- "*" Celda
Campo "1" *-- "*" Celda
Campo "1" --o "1" Juego
Juego "1" *-- "1" SeleccinarDificultad
Campo "1" *-- "1" SeleccinarDificultad
@enduml